Add '11 java object' and '12 java modifier and access rights' content